<resources>
    <string name="app_name">PoolMarbum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informationAboutPriceInHour">Час занятия в бассейне всего 200 рублей</string>
    <string name="operationMode">Режим работы: Пн&#8211;вс: 8:00 &#8211; 20:00</string>
    <string name="numberPhone">Телефон для связи:+7 (917)&#8211;710&#8211;47&#8211;36</string>
    <string name="buyTicket">Купить билет</string>
    <string name="ourPrice">Наши цены</string>
    <string name="bnt_buy_tick">Купить детский билет</string>bnt_buy_child_tick
    <string name="bnt_buy_child_tick">Купить взрослый билет</string>
    <string name="rules">ПРАВИЛА ПОСЕЩЕНИЯ</string>
    <string name="general_info">1. Общие сведения</string>
    <string name="duties_visitors">2. Обязанности посетителей</string>
    <string name="prohibition">3. Посетителям запрещается</string>
    <string name="admins_can">4. Администрация имеет право</string>
    <string name="visitors_can">5. Посетители имеют право</string>
    <string name="discuss">6. Разрешение конфликтных ситуаций</string>
    <string name="general_info_in_activity">1.1. Время работы плавательного бассейна ежедневно с 08:00 до 20:00 часов\n
\n
1.2. Посещение бассейна детьми в возрасте до пяти лет запрещается. Если сотрудник администрации бассейна сомневается в возрасте ребенка, он вправе попросить к предъявлению свидетельство о рождении ребенка или паспорт родителей. \n
\n
1.3. Посещение бассейна детьми от пяти до тринадцати лет разрешается только в присутствии родителей/законных представителей, которые несут ответственность за жизнь и здоровье ребенка (один родитель/законный представитель несет ответственность за одного ребенка). Во время плавания родители/законные представители не должны выпускать детей из поля своего зрения, предварительно объяснив им правила поведения на воде. \n
\n
1.4. Запрещено нахождение детей противоположного пола с родителями в раздевалках и помывочных помещениях (душевых). \n
\n
1.5. Детям от пяти до десяти лет и взрослым старше семидесяти лет необходимо предоставлять медицинскую справку о состоянии здоровья. \n
\n
1.6. Посещение плавательного бассейна разрешается только при наличии: купальных принадлежностей, шапочки для плавания, специальной резиновой обуви, принадлежностей для душа и полотенца. Рекомендуется использовать купальные принадлежности согласно ГОСТ 31406-2009.\n
\n
1.7. Посетитель оплачивает в кассе разовое посещение согласно прейскуранту (предъявляет абонемент), после чего сдает на хранение в гардероб верхнюю одежду и уличную обувь. Сумки, кейсы, чемоданы на хранение не принимаются. За оставленные без присмотра личные и ценные вещи администрация бассейна ответственности не несет.\n
\n
1.8. При необходимости посетитель вправе воспользоваться ячейкой шкафа для хранения ценных вещей, где может разместить деньги, мобильный телефон, документы, ключи и другие ценные вещи. Ключ от закрытой ячейки находится у посетителя на протяжении всего времени пользования бассейном.\n
\n
1.9. После этого посетителю следует пройти в раздевалку.\n
\n
1.10. Каждый посетитель обязан перед посещением бассейна снять все ювелирные и иные украшения, принять душ с моющими средствами и смыть с себя любые косметические средства.\n
\n
1.11. Рекомендуется входить в воду, спускаясь по специально предусмотренному для этого трапу/лестнице, повернувшись спиной к воде.\n
\n
1.12. При отсутствии или при недостаточном развитии навыков плавания обязательно использование поддерживающих на воде средств (доски для плавания и прочих).\n
\n
1.13. Во время плавания необходимо ориентироваться на разметку бассейна. Плавание внутри каждой отдельно взятой дорожки осуществляется против часовой стрелки (по правой стороне) с соблюдением интервала 3-4 метра, не допуская столкновений. Обгон других посетителей на дорожке необходимо осуществлять только слева, не желательно проплывать между двумя встречными пловцами.\n
\n
1.14. Не рекомендуется занимать дорожку, выделенную для скоростного плавания, в случае отсутствия навыков плавания или их недостаточном развитии.\n
\n
1.15. Во время проведения групповых занятий или персональных занятий в бассейне зона для плавания может быть ограничена.\n
\n
1.16. Посетитель должен контролировать время нахождения в бассейне, по окончании указанного времени покинуть чашу бассейна.\n
\n
1.17. По окончании пользования бассейном посетитель забирает из гардероба верхнюю одежду, из ячейки ценные вещи, оставив ключ в замке ячейки.</string>
    <string name="back">назад</string>
    <string name="price">расписание и цены</string>
    <string name="rulesBtn">правила посещения</string>
    <string name="generalInformationActivity">1. Общие сведения</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="nameVisitors">Общие сведения</string>
    <string name="admin">
4.1. Медицинская сестра имеет право проводить визуальный осмотр посетителя бассейна независимо от наличия у него медицинской справки ЛПУ. При выявлении нарушений целостности кожных покровов, наличия грибковых заболеваний и симптомов респираторных заболеваний (кашель, насморк) медицинская сестра имеет право не допускать посетителя в плавательный бассейн.\n
\n
4.2. Контролировать соблюдение посетителями настоящих правил, делать замечания.\n
\n
4.3. Лишать права посещения бассейна лиц, злостно нарушающих правила посещения плавательного бассейна.</string>
    <string name="textVisitors">2.1. Строго соблюдать настоящие правила, правила техники безопасности, санитарно-гигиенические требования, выполнять требования персонала бассейна в части соблюдения санитарно-гигиенических требований. \n
\n
2.2. Соблюдать общественный порядок и общепринятые нормы поведения, вести себя уважительно по отношению к другим посетителям, персоналу бассейна, не допускать действий, создающих опасность для окружающих. \n
\n
2.3. При наличии медицинских ограничений к занятиям физкультурой и спортом, либо плохом самочувствии, утомлении, обязательно сообщить об этом персоналу бассейна.  \n
\n
2.4. В случае получения травмы, возникновения во время занятий в воде болевых ощущений в суставах, мышцах конечностей, судорог, сильного покраснения глаз или кожи, возникновения кровотечения, а также при плохом самочувствии, прекратить занятие и сообщить об этом персоналу бассейна. \n
\n
2.5. При наличии условий, мешающих проведению занятий или угрожающих жизни и здоровью посетителей, прекратить занятия до устранения этих условий. \n
\n
2.6. Руководствоваться указаниями персонала бассейна, плавать на дорожках, указанных инструктором, не заплывать на дорожки, не определенные им для плавания, быть внимательными, не отвлекаться и не отвлекать других посетителей. \n
\n
2.7. Бережно пользоваться спортивным инвентарем, оборудованием и имуществом бассейна, применять его строго по назначению. </string>
    <string name="admin_can">АДМИНИСТРАЦИЯ ИМЕЕТ ПРАВО</string>
    <string name="prohibitions">3.1. Находиться в здании бассейна в состоянии алкогольного или наркотического опьянения, использовать ненормативную лексику, громко, неуважительно и/или агрессивно разговаривать, делать все, что может помешать окружающим. \n
 \n
3.2. Находиться в помещениях бассейна, за исключением помещения фойе, в верхней уличной одежде и обуви. \n
 \n
3.3. Курить в помещениях бассейна.\n
 \n
3.4. Приносить и распивать в помещениях бассейна алкогольные напитки.\n
 \n
3.5. Приносить в зал чаши бассейна продукты питания, напитки с последующим их употреблением.\n
 \n
3.6. Находиться в помещениях и зонах плавательного бассейна, которые не предназначены для размещения посетителей.\n
 \n
3.7. Входить в бассейн без посещения душа.\n
 \n
3.8. Перед пользованием бассейном втирать в кожу различные кремы и мази по причине возможного нанесения вреда своему здоровью (перегрев, повышение артериального давления, аллергические реакции и пр.).\n
 \n
3.9. Бегать по лестницам и обходным дорожкам.\n
 \n
3.10. Плавать без плавательных принадлежностей и шапочки для плавания, а так же в одежде, не предназначенной для бассейна.\n
 \n
3.11. Использовать маску для подводного плавания с конструктивным применением стекла.\n
 \n
3.12. Плавать поперек плавательных дорожек и висеть на разделительных дорожках.\n
 \n
3.13. Прыгать с бортиков.\n
 \n
3.14. Посещать плавательный бассейн при повреждении или серьезных заболеваниях кожных покровов, наличии инфекционных и иных заболеваний, препятствующих занятию водными процедурами.\n
 \n
3.15. Оставлять без присмотра детей, допущенных к совместному плаванию с родителями.</string>
    <string name="prohibition_name">ПОСЕТИТЕЛЯМ ЗАПРЕЩАЕТСЯ</string>
    <string name="todo_">TODO</string>
    <string name="marboom">Marboom</string>
    <string name="entry">ВОЙТИ</string>
    <string name="txt_registr">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="signin_to_your">Войдите в свою учетную запись!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="pool">pool</string>
    <string name="todo_back">TODO</string>
    <string name="email">Введите почту</string>
    <string name="password">Введите пароль</string>
    <string name="avtorization">Авторизоваться</string>
    <string name="vis_can">
5.1. Вносить замечания и предложения по качеству оказываемых услуг. \n
\n
5.2. Предъявлять претензии и вносить замечания в отношении качества обслуживания.</string>
    <string name="name_vis_can">Посетители имеют право</string>
    <string name="name_conflict">Разрешение конфликтных ситуаций</string>
    <string name="conflict">6.1. За последствия, возникающие в результате нарушения настоящих правил, администрация плавательного бассейна ответственности не несет. \n
        \n
6.2. В случае причинения материального ущерба посетителю действиями сотрудников бассейна вопрос о его возмещении решается путем согласования, в случае недостижения согласия - в судебном порядке.</string>
    <string name="hintforemail">введите почту</string>
</resources>