<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="#0187FA">



    <TextView
        android:id="@+id/infoAboutPriceInHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informationAboutPriceInHour"
        android:textColor="#FAFAFA"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/operatingMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoAboutPriceInHour"
        android:text="@string/operationMode"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/numberPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberPhone"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/operatingMode"
        />

    <Button
        android:id="@+id/buyTicket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buyTicket"
        android:layout_below="@id/numberPhone"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#F8F8F6"
        android:textColor="@android:color/black"
        android:layout_marginStart="3dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/info_pool"
        android:layout_below="@id/buyTicket"
        android:layout_width="400dp"
        android:layout_height="430dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        android:elevation="10dp">

        <ImageView
            android:layout_width="700dp"
            android:layout_height="440dp"
            android:layout_below="@id/buyTicket"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/todo2"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            android:src="@drawable/info_pool" />
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/button_price"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:padding="8dp"
        android:layout_below="@id/info_pool"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/white"
        android:text="@string/price"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_rules"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:layout_below="@id/info_pool"
        android:layout_marginStart="290dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/black"
        android:text="@string/rulesBtn">

    </Button>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="4dp"
         android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_pool"
        android:backgroundTint="@color/white"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo_"
        android:focusable="true" />
</RelativeLayout>