<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_registr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/marboom_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marboom"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="5dp"
        android:textSize="50sp"
        android:background="#5103A9F4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="75dp" />

    <TextView
        android:id="@+id/pool_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pool"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50sp"
        android:background="#5103A9F4"
        android:layout_below="@id/marboom_registration"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="75dp" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_below="@id/marboom_registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textColor="@color/black"
        android:backgroundTint="#EFD0A2"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/entry" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_below="@id/btnSignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:backgroundTint="#EECFA1"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_registr" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegistration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/signin_to_your" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/pool_registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:layout_below="@id/EmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="" />


</RelativeLayout>