<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0187FA"
    tools:context=".fragments.InfoFragment">





        <TextView
            android:id="@+id/infoAboutPriceInHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotmationAboutPriceInHour"
            android:textColor="#FAFAFA"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operatingMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoAboutPriceInHour"
            android:text="@string/operationMode"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/numberPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberPhone"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/operatingMode"
            />
        <Button
            android:id="@+id/buyTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyTicket"
            android:layout_below="@id/numberPhone"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"
            android:layout_marginStart="4dp"
            />

        <ImageView
            android:id="@+id/info_pool"
            android:layout_width="400dp"
            android:layout_height="716dp"
            android:layout_below="@id/buyTicket"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-51dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/info_pool" />


    </RelativeLayout>
